                       User-Visible WebAuth Changes

WebAuth 4.6.1 (unreleased)

    In WebLogin, verify that the username form field was sent before
    attempting to do multifactor operations and return an error if it
    isn't, avoiding undefined variable warnings and other errors deeper in
    the WebLogin code.

WebAuth 4.6.0 (2014-03-18)

    WARNING: When upgrading to this release, you will need to change the
    ownership of the mod_webauth keyring file (named in the WebAuthKeyring
    Apache directive) to the user and group the Apache child processes run
    as.  (This is controlled by the User and Group Apache directives and
    is often something like www-data.)  Previous versions would create
    this file readable only by root, but, as of this release, it must be
    readable and writable by the Apache child processes.

    mod_webauth supports a new configuration directive, WebAuthCookiePath,
    which scopes all cookies set by mod_webauth to the given path.  This
    allows separate sections of the same virtual host to be treated as
    independent for authentication purposes.  This can be useful when
    controlling factor restrictions via the user information service.
    When using this directive with a logout link, be sure that the logout
    configuration (WebAuthDoLogout) is subject to the same
    WebAuthCookiePath directive or it will not work properly.  Be aware
    that the current version of mod_webauth does not correctly handle
    receiving multiple cookies with the same name from the browser.  When
    using this directive, ensure that all WebAuth-protected portions of
    the site use this directive and none of the scopes are overlapping.

    WebAuthOptional should now work properly with Apache 2.4.  Thanks to
    Benjamin Coddington for the patches.

    Don't delete notes in mod_webauth after using them for authentication
    in case the authentication is happening in a subrequest and the parent